<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/interface_permissions"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        app:tint="@color/colorPrimary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ui_start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_voice"
            tools:ignore="ContentDescription"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/mic_permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/mic_permission_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivSetting" />

        <TextView
            android:id="@+id/text_aviso_mic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="10dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/text_aviso_mic"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/mic_permission_title"
            app:layout_constraintStart_toStartOf="@+id/mic_permission_title"
            app:layout_constraintTop_toBottomOf="@+id/mic_permission_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pasos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button_start"
            app:layout_constraintEnd_toEndOf="@+id/text_aviso_mic"
            app:layout_constraintStart_toStartOf="@+id/text_aviso_mic"
            app:layout_constraintTop_toBottomOf="@+id/text_aviso_mic">

            <ImageView
                android:id="@+id/line"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/paso_cinco_image"
                app:layout_constraintEnd_toEndOf="@+id/paso_uno_image"
                app:layout_constraintStart_toStartOf="@+id/paso_uno_image"
                app:layout_constraintTop_toBottomOf="@+id/paso_uno_image"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/paso_uno_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/circle_line_transparent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/paso_uno_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:text="@string/p_one"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_uno_image"
                app:layout_constraintEnd_toEndOf="@+id/paso_uno_image"
                app:layout_constraintStart_toStartOf="@+id/paso_uno_image"
                app:layout_constraintTop_toTopOf="@+id/paso_uno_image" />

            <TextView
                android:id="@+id/paso_uno_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/p_one_description"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_uno_image"
                app:layout_constraintStart_toEndOf="@+id/paso_uno_image"
                app:layout_constraintTop_toTopOf="@+id/paso_uno_image" />

            <ImageView
                android:id="@+id/paso_dos_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/paso_uno_image"
                app:layout_constraintTop_toBottomOf="@+id/paso_uno_image"
                app:srcCompat="@drawable/circle_line_transparent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/paso_dos_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:text="@string/p_two"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_dos_image"
                app:layout_constraintEnd_toEndOf="@+id/paso_dos_image"
                app:layout_constraintStart_toStartOf="@+id/paso_dos_image"
                app:layout_constraintTop_toTopOf="@+id/paso_dos_image" />

            <TextView
                android:id="@+id/paso_dos_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/p_two_description_mic"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_dos_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/paso_dos_image"
                app:layout_constraintTop_toTopOf="@+id/paso_dos_image" />

            <ImageView
                android:id="@+id/paso_tres_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/paso_uno_image"
                app:layout_constraintTop_toBottomOf="@+id/paso_dos_image"
                app:srcCompat="@drawable/circle_line_transparent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/paso_tres_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:text="@string/p_three"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_tres_image"
                app:layout_constraintEnd_toEndOf="@+id/paso_tres_image"
                app:layout_constraintStart_toStartOf="@+id/paso_tres_image"
                app:layout_constraintTop_toTopOf="@+id/paso_tres_image" />

            <TextView
                android:id="@+id/paso_tres_descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/p_three_description_mic"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_tres_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/paso_tres_image"
                app:layout_constraintTop_toTopOf="@+id/paso_tres_image" />

            <ImageView
                android:id="@+id/paso_cuatro_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/paso_tres_image"
                app:layout_constraintTop_toBottomOf="@+id/paso_tres_image"
                app:srcCompat="@drawable/circle_line_transparent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/paso_cuatro_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:text="@string/p_four"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_cuatro_image"
                app:layout_constraintEnd_toEndOf="@+id/paso_cuatro_image"
                app:layout_constraintStart_toStartOf="@+id/paso_cuatro_image"
                app:layout_constraintTop_toTopOf="@+id/paso_cuatro_image" />

            <TextView
                android:id="@+id/paso_cuatro_descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/p_four_description_mic"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_cuatro_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/paso_cuatro_image"
                app:layout_constraintTop_toTopOf="@+id/paso_cuatro_image"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/paso_cinco_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@+id/paso_cuatro_image"
                app:layout_constraintTop_toBottomOf="@+id/paso_cuatro_image"
                app:srcCompat="@drawable/circle_line_transparent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/paso_cinco_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:text="@string/p_five"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_cinco_image"
                app:layout_constraintEnd_toEndOf="@+id/paso_cinco_image"
                app:layout_constraintStart_toStartOf="@+id/paso_cinco_image"
                app:layout_constraintTop_toTopOf="@+id/paso_cinco_image" />

            <TextView
                android:id="@+id/paso_cinco_descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/p_five_description"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/paso_cinco_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/paso_cinco_image"
                app:layout_constraintTop_toTopOf="@+id/paso_cinco_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_margin="2dp"
                android:background="@drawable/button_corners_reload"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_start"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>