<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".retrofit_mvvm.view.RestServicesActivity">

    <TextView
        android:id="@+id/book_search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="@dimen/margin_8"
        android:text="@string/book_search_title"
        android:textAlignment="center"
        android:textSize="@dimen/text_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/key_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/shape_rounded"
        android:hint="@string/key_word"
        android:padding="@dimen/margin_8"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_search_title" />

    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/shape_rounded"
        android:hint="@string/author"
        android:padding="@dimen/margin_8"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_word" />

    <Button
        android:id="@+id/button_search_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/shape_rounded"
        android:text="@string/button_search_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="@dimen/margin_40"
        android:layout_height="@dimen/margin_40"
        android:visibility="gone"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="442dp"
        app:layout_constraintTop_toTopOf="@+id/recycler_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_books"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/margin_10"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/button_search_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_clothe" />
</androidx.constraintlayout.widget.ConstraintLayout>